feat: java collection test